[package]
name = "srfng"
version = "0.1.0"
authors = ["Paul Saunders <coruscateor@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "A library for generating semi-random file names"
readme = "README.md"
repository = "https://github.com/coruscateor/srfng"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
chrono = "0.4.19"
