[package]
name = "srfng"
version = "1.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for generating semi-random file names"
readme = "README.md"
repository = "https://github.com/coruscateor/srfng"
homepage = "https://coruscateor.com/projects/srfng"
keywords = ["file", "files", "name", "names"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.19"
